[workspace]
members = ["canary", "mimic", "mimic/generate"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Jonas Kruckenberg <iterpre@protonmail.com>"]
license = "MIT"

[package]
name = "unsafe-tools"
description = "A collection of tools making safer unsafe Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true

[dependencies]
unsafe-tools-canary = { path = "canary", version = "0.1.2" }
unsafe-tools-mimic = { path = "mimic", version = "0.1.2" }
